--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,8 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TheMunsi">
         <activity
-            android:theme="@style/Theme.TheMunsi.NoActionBar"
-            android:name=".ui.splash.SpashScreen">
+            android:launchMode="singleTop"
+            android:name=".ui.splash.Proceed"></activity>
+        <activity
+            android:name=".ui.splash.SpashScreen"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.TheMunsi.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
